# myvideoorganizer

./: MOVIE_ORGANIZER_GUIDE.md  app.py  commands.md  config.py  main.py  readme.MD  requirements.txt  start_flask.ps1
videomanager/: .gitignore  PLAN.md  README.md  TEST_REPORT.md  config.toml  main.py  plan.md  pyproject.toml  uv.toml
videomanager/.opencode/: opencode.jsonc
videomanager/.opencode/agent/: movie-info.md  videomanager.md
videomanager/.opencode/agents/: 115oper.md  movie-info.md  scraper.md  videomanager.md
videomanager/.opencode/command/: organize.md
videomanager/.opencode/commands/: clean.md  organize.md  status.md
videomanager/.opencode/skills/config-skill/: SKILL.md
videomanager/.opencode/skills/config-skill/references/: config-fields.md
videomanager/.opencode/skills/movie-organizer/: SKILL.md
videomanager/.opencode/skills/movie-organizer/scripts/: execute_plan.py  helpers.py  plan_movie_organize.py
videomanager/.opencode/skills/uv-setup/: SKILL.md
videomanager/.opencode/skills/uv-setup/scripts/: check_uv.py  config_mirror.py  setup_venv.py  status.py
videomanager/.opencode/skills/video-actor-organizer/: SKILL.md
videomanager/.opencode/skills/video-actor-organizer/plans/: actor_classify_20260220_150257.json
videomanager/.opencode/skills/video-actor-organizer/scripts/: classifier.py  (+2 more)
videomanager/.opencode/skills/video-big-detector/: SKILL.md
videomanager/.opencode/skills/video-cleaner/: SKILL.md
videomanager/.opencode/skills/video-renamer/: SKILL.md
videomanager/memory/: actor_mappings.toml  paths.md  recent.md
(+45 files in other folders)
