[project]
name = "videomanager"
version = "1.0.0"
description = "视频整理器 - Opencode Agent 驱动版"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pypinyin>=0.51.0",
    "pykakasi>=2.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [".opencode/skills"]
